force-app/main/default/objects/CRI_Access_Log__c/CRI_Access_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable record of who accessed a Credit Check record (pull or view), and when. Decoupled from Credit_Check__c and Loan_Application__c via Lookup (not master-detail) so the audit trail survives even if the record it audits is later deleted at retention expiry.</description>
    <label>CRI Access Log</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Access Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRI Access Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>