force-app/main/default/objects/CRI_Access_Log__c/fields/Accessed_By__c.field-meta.xml
<CustomField>
    <fullName>Accessed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not required — Salesforce disallows Restrict/Cascade on a lookup to User (User records are deactivated, not deleted), so SetNull is the only valid constraint here, which in turn requires the field to be optional.</description>
    <label>Accessed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CRI Access Logs</relationshipLabel>
    <relationshipName>CRI_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>