force-app/main/default/objects/CRI_Access_Log__c/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not required, despite being core to what this log records — SetNull requires it to be optional, which is what lets this log survive the Credit Check's eventual cascade deletion.</description>
    <label>Credit Check</label>
    <referenceTo>Credit_Check__c</referenceTo>
    <relationshipLabel>CRI Access Logs</relationshipLabel>
    <relationshipName>CRI_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>