force-app/main/default/objects/CRI_Access_Log__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not required — same SetNull reasoning as Credit_Check__c on this object, so the log survives the parent application's retention-driven deletion.</description>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>CRI Access Logs</relationshipLabel>
    <relationshipName>CRI_Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>